k8-deploy/nodeport_deploy/dev/deployment-dev.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdcm-web-ui-dev
  namespace: pdcm-web-ui-dev
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: pdcm-web-ui-dev
    spec:
      containers:
        - name: pdcm-web-ui-dev
          image: "pdxfinder/pdcm-web-ui:dev"
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: pdcm-web-ui-dev-service
  namespace: pdcm-web-ui-dev
  labels:
    name: pdcm-web-ui-dev-service
spec:
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  selector:
    app: pdcm-web-ui-dev
  type: NodePort
