k8-deploy/nodeport_deploy/dev/ingress-dev.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdcm-web-ui-dev-ingress
  namespace: pdcm-web-ui-dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"

spec:
  rules:
    - host: dev.cancermodels.org
      http:
        paths:
          - path: /
            backend:
              serviceName: pdcm-web-ui-dev-ingress-service
              servicePort: 80
